--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gnuxie-tsconfig",
   "version": "0.0.0",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
