--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gnuxie-tsconfig",
   "version": "0.0.0",
   "main": "src/index.js",
-  "type": "module",
+  "type": "CommonJS",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
