--- a/templates/.gitignore
+++ b/templates/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 Gnuxie <Gnuxie@protonmail.com>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 # Created by https://www.gitignore.io/api/node,macos,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,macos,visualstudiocode
 
