--- a/templates/tsconfig.json
+++ b/templates/tsconfig.json
@@ -1,4 +1,8 @@
 {
-    "extends": "gnuxie-tsconfig/tsconfig.json"
+  "extends": "gnuxie-tsconfig/tsconfig.json",
+  "compilerOptions": {
+    "declarationDir": "dist",
+    "outDir": "dist"
+   }
 }
 
