Update to eslint9.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     ],
     "declaration": true,
     "declarationMap": true,
+    "exactOptionalPropertyTypes": true,
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
@@ -18,7 +19,8 @@
     "resolveJsonModule": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
+    "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
   }
 }
