--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "gnuxie-tsconfig",
   "version": "0.1.0",
   "main": "src/index.js",
-  "type": "CommonJS",
+  "type": "module",
+  "license": "MIT",
   "scripts": {
     "copy-templates": "scripts/copy-templates.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,13 +13,19 @@
     "templates/*",
     "scripts/*"
   ],
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+  "dependencies": {},
+  "peerDependencies": {
+    "@eslint/js": "^9.6.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.6.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.6.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.0"
   }
 }
