might help if i include source files in the package...

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "files": [
     "tsconfig.json",
     "templates/*",
-    "scripts/*"
+    "scripts/*",
+    "src/*"
   ],
   "dependencies": {},
   "peerDependencies": {
