update references from gnuxie-tsconfig to @gnuxie/tsconfig.

--- a/templates/tsconfig.json
+++ b/templates/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "gnuxie-tsconfig/tsconfig.json",
+  "extends": "@gnuxie/tsconfig/tsconfig.json",
   "compilerOptions": {
     "declarationDir": "dist",
     "outDir": "dist"
