--- a/templates/.github/workflows/checks.yml
+++ b/templates/.github/workflows/checks.yml
@@ -20,9 +20,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
-      - run: yarn install
-      - run: yarn build
-      - run: yarn lint
+      - run: npm run install
+      - run: npm run build
+      - run: npm run lint
   unit:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -33,6 +33,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
-      - run: yarn install
-      - run: yarn build
-      - run: yarn test
+      - run: npm run install
+      - run: npm run build
+      - run: npm run test
