--- a/templates/REUSE.toml
+++ b/templates/REUSE.toml
@@ -16,6 +16,12 @@ SPDX-FileCopyrightText = "Gnuxie <Gnuxie@protonmail.com>"
 SPDX-License-Identifier = "CC0-1.0"
 
 [[annotations]]
+path = "package-lock.json"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "Gnuxie <Gnuxie@protonmail.com>"
+SPDX-License-Identifier = "CC0-1.0"
+
+[[annotations]]
 path = "yarn.lock"
 precedence = "aggregate"
 SPDX-FileCopyrightText = "Gnuxie <Gnuxie@protonmail.com>"
