--- a/templates/.pre-commit-config.yaml
+++ b/templates/.pre-commit-config.yaml
@@ -30,15 +30,17 @@ repos:
   - repo: local
     hooks:
       - id: npm-build
-        name: linter
+        name: npm build
         entry: npm run build
         language: system
+        pass_filenames: false
   - repo: local
     hooks:
       - id: npm-lint
         name: linter
         entry: npm run lint
         language: system
+        pass_filenames: false
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.29.4
     hooks:
