--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "target": "es2024",
     "module": "CommonJS",
     "lib": [
-      "ESNext"
+      "es2024"
     ],
     "declaration": true,
     "declarationMap": true,
@@ -15,7 +15,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": false,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "resolveJsonModule": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
