--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2024",
-    "module": "CommonJS",
+    "module": "node16",
     "lib": [
       "es2024"
     ],
